syntax = "proto3";

import "Contracts/Common.proto";

package LoaningServices;

service LoaningService {
  rpc LoanBooks(LoanRequestMsg) returns (Common.LoanMsg);
  rpc ReturnBooks(ReturnBookRequestMsg) returns(Common.LoanMsg);
}

message LoanRequestMsg{
  repeated int64 BatchId = 1;
  int64 MemberId = 2;
}

message ReturnLoanItem{
  int64 BatchId = 1;
  Common.LoanItemStatusMsg ItemStatus = 2;
}
message ReturnBookRequestMsg{
  int64 LoanId = 1;
  int64 MemberId = 2;
  repeated ReturnLoanItem LoanItem = 3;
}